Added functions for scraping anime on AnimeFLV and save in Synology Nas.

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -32,3 +32,6 @@
 /**
  * 02-components.
  */
+@import 'custom/02-components/00-login';
+@import 'custom/02-components/01-download-station';
+@import 'custom/02-components/02-toast';
