--- a/scss/custom/01-global/16-section.scss
+++ b/scss/custom/01-global/16-section.scss
@@ -1,6 +1,15 @@
 .section-row{
   padding: 60px 0;
+
+  + .section-row{
+    padding-top: 0;
+  }
 }
+
+#login.section-row{
+  padding: 0;
+}
+
 
 @include media-breakpoint-up(md) {
   .section-row{
