Changed input folder to Select.

--- a/templates/01-components/01-download-station.html.twig
+++ b/templates/01-components/01-download-station.html.twig
@@ -3,9 +3,9 @@
     <form id="url-form">
       <label for="animeUrl" class="form-label">URL</label>
       <input type="text" class="form-control" id="animeUrl" placeholder="Added url">
-      <label for="animePath" class="form-label">Folder *</label>
-      <input type="text" class="form-control" id="animePath" placeholder="Added folder">
-      <button type="submit" id="downloadAnime" class="btn btn-primary">Download</button>
+      <select class="folder-select form-select" aria-label="select folder">
+        <option selected>Select a folder</option>
+      </select>
     </form>
 
     <button type="button" id="initScraping" class="btn btn-link text-white">Scraping AnimeFLV</button>
