Added function to download animeflv files from desktop.

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -35,3 +35,5 @@
 @import 'custom/02-components/00-login';
 @import 'custom/02-components/01-download-station';
 @import 'custom/02-components/02-toast';
+@import 'custom/02-components/03-offcanvas';
+@import 'custom/02-components/20-desktop';
