--- a/templates/00-globals/00-start.html.twig
+++ b/templates/00-globals/00-start.html.twig
@@ -10,4 +10,4 @@
     <link href="./css/style.min.css" rel="stylesheet">
   </head>
 
-  <body class="bg-dark text-white visually-hidden">
+  <body class="bg-dark text-white">
