--- a/scss/custom/01-global/14-container.scss
+++ b/scss/custom/01-global/14-container.scss
@@ -4,7 +4,7 @@
   padding-right: map-get($container-paddings-x, 'sm');
 }
 
-#login{
+#sid{
   .container{
     max-width: map-get($container-max-widths, 'sm');
   }
