--- a/scss/custom/02-components/101-animeflv.scss
+++ b/scss/custom/02-components/101-animeflv.scss
@@ -1,11 +1,11 @@
 #animeflv{
-  form#url-form{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-
+  .search-container{
     label{
-      margin: 0;
+      margin-bottom: 0;
+    }
+
+    + *{
+      margin-top: 20px;
     }
   }
 
