--- a/scss/custom/02-components/101-animeflv.scss
+++ b/scss/custom/02-components/101-animeflv.scss
@@ -9,6 +9,12 @@
     }
   }
 
+  .filters-container{
+    + *{
+      margin-top: 20px;
+    }
+  }
+
   button#initScraping{
     padding: 6px 0;
 
