Added sidebar to AnimeFLV.

--- a/scss/custom/01-global/31-list.scss
+++ b/scss/custom/01-global/31-list.scss
@@ -5,7 +5,7 @@ ul.list-group{
   gap: 0 10px;
 
   li.list-group-item{
-    width: calc(50% - 5px);
+    width: 100%;
     padding: 0;
     
     a,
