--- a/scss/custom/02-components/101-animeflv.scss
+++ b/scss/custom/02-components/101-animeflv.scss
@@ -1,157 +1,155 @@
 #animeflv{
-  .search-container{
-    label{
-      margin-bottom: 0;
-    }
+  h2.title{
+    text-align: center;
+    margin-bottom: 0;
 
     + *{
-      margin-top: 20px;
+      margin-top: 40px;
     }
   }
 
-  .filters-container{
-    + *{
-      margin-top: 20px;
-    }
-  }
+  .sidebar{
+    .sticky-lg-top{
+      top: 20px;
 
-  button#initScraping{
-    padding: 6px 0;
-
-    + *{
-      margin-top: 20px;
-    }
-  }
-
-  form#search-form{
-    label{
-      width: 100%;
-    }
-
-    input{
-      border-top-left-radius: 0.375rem;
-      border-bottom-left-radius: 0.375rem;
-    }
-
-    + *{
-      margin-top: 15px;
-    }
-  }
-
-  .row{
-    gap: 30px 0;
-
-    + *{
-      margin-top: 30px;
-    }
-  }
-
-  .anime-wrapper{
-    content-visibility: auto;
-
-    .anime{
-      position: relative;
-      height: 100%;
-
-      .image{
-        position: relative;
-
-        img{
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-        }
-
-        > span{
-          position: absolute;
-          bottom: 0;
-          right: 0;
-          background: black;
-          padding: 5px 10px;
-          opacity: .8;
-        }
-      }
-
-      .status{
-        display: flex;
-        gap: 0 5px;
-        padding: 10px 0;
-          
-        span{
-          background-color: #495057!important;
-          padding: 1px 8px;
-          border-radius: 25px;
-          font-size: 12px;
-        }
-      }
-
-      .text{
-        h2{
+      .search-container{
+        label{
           margin-bottom: 0;
         }
 
         + *{
-          margin-top: 5px;
+          margin-top: 20px;
         }
       }
     }
+
+    + *{
+      margin-top: 20px;
+    }
   }
 
-  .anime-detail{
-    .anime{
-      display: flex;
-      flex-direction: column;
-      gap: 15px 0;
+  .anime-container{
+    .row{
+      gap: 30px 0;
+    }
 
-      .image{
-        display: flex;
-        justify-content: center;
-      }
+    .anime-wrapper{
+      content-visibility: auto;
 
-      .text{
-        width: 100%;
+      .anime{
+        position: relative;
+        height: 100%;
 
-        h2{
-          margin-bottom: 0;
+        .image{
+          position: relative;
+          @include border-radius(10px);
+          overflow: hidden;
 
-          + *{
-            margin-top: 5px;
+          img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+
+          > span{
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            background: black;
+            padding: 5px 10px;
+            opacity: .8;
           }
         }
 
-        p{
-          margin-bottom: 0;
-
-          + *{
-            margin-top: 5px;
-          }
-        }
-
-        .genres{
-          span.genre{
+        .status{
+          display: flex;
+          gap: 0 5px;
+          padding: 10px 0;
+            
+          span{
             background-color: #495057!important;
             padding: 1px 8px;
             border-radius: 25px;
             font-size: 12px;
-
-            + *{
-              margin-left: 5px;
-            }
-          }
-
-          + *{
-            margin-top: 10px;
           }
         }
 
-        .tab-content{
-          #synology-tab-pane{
-            > p{
-              margin-top: 15px;
+        .text{
+          h2{
+            margin-bottom: 0;
+          }
+
+          + *{
+            margin-top: 5px;
+          }
+        }
+      }
+    }
+
+    .anime-detail{
+      .anime{
+        display: flex;
+        flex-direction: column;
+        gap: 15px 0;
+
+        .image{
+          display: flex;
+          justify-content: center;
+
+          img{
+            @include border-radius(10px);
+          }
+        }
+
+        .text{
+          width: 100%;
+
+          h2{
+            margin-bottom: 0;
+
+            + *{
+              margin-top: 5px;
+            }
+          }
+
+          p{
+            margin-bottom: 0;
+
+            + *{
+              margin-top: 5px;
+            }
+          }
+
+          .genres{
+            span.genre{
+              background-color: #495057!important;
+              padding: 1px 8px;
+              border-radius: 25px;
+              font-size: 12px;
+
+              + *{
+                margin-left: 5px;
+              }
+            }
+
+            + *{
+              margin-top: 10px;
+            }
+          }
+
+          .tab-content{
+            #synology-tab-pane{
+              > p{
+                margin-top: 15px;
+              }
             }
           }
         }
       }
+    }
+
+    + *{
+      margin-top: 40px;
     }
   }
 
@@ -176,6 +174,33 @@
         .image{
           display: block;
         }
+      }
+    }
+  }
+}
+
+@include media-breakpoint-up(md) {
+  #animeflv{
+    .anime-container{
+      .anime-detail{
+        .anime{
+          flex-direction: row;
+          gap: 0 15px;
+  
+          .image{
+            display: block;
+          }
+        }
+      }
+    }
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  #animeflv{
+    .sidebar{
+      + *{
+        margin-top: 0;
       }
     }
   }
