--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -31,9 +31,20 @@ $container-paddings-x: (
   lg: 45px
 ) !default;
 
-// Colors.
+// scss-docs-start color-variables
 $white: #ffffff !default;
 $black: #000000 !default;
+$red:   #e53637 !default;
+
+// fusv-disable
+$purple: #0b0c2a !default;
+$purple-1000: #070720 !default;
+
+//#e53334
+
+$purples: (
+  "purple-1000": $purple-1000
+) !default;
 
 // Offcanvas
 
@@ -50,6 +61,9 @@ $list-group-bg:                     transparent !default;
 // Pagination
 
 // scss-docs-start pagination-variables
+
+// Pagination
+
 $pagination-color:                  $white !default;
 $pagination-bg:                     transparent !default;;
 $pagination-border-width:           none !default;
@@ -75,3 +89,14 @@ $pagination-disabled-border-color:  $white !default;
 // scss-docs-start nav-variables
 $nav-link-color:                    $white !default;
 $nav-link-hover-color:         $white !default;
+
+// scss-docs-start navbar-dark-variables
+$navbar-dark-color:                 rgba($white, .55) !default;
+$navbar-dark-hover-color:           rgba($white, .75) !default;
+$navbar-dark-active-color:          $white !default;
+$navbar-dark-disabled-color:        rgba($white, .25) !default;
+$navbar-dark-icon-color:            $navbar-dark-color !default;
+$navbar-dark-toggler-icon-bg:       url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'><path stroke='#{$navbar-dark-icon-color}' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>") !default;
+$navbar-dark-toggler-border-color:  rgba($white, .1) !default;
+$navbar-dark-brand-color:           $navbar-dark-active-color !default;
+$navbar-dark-brand-hover-color:     $navbar-dark-active-color !default;
