--- a/scss/custom/01-global/20-buttons.scss
+++ b/scss/custom/01-global/20-buttons.scss
@@ -58,4 +58,44 @@ button.btn-link {
 a{
   color: white;
   text-decoration: none;
+
+  &.underline-link {
+    position: relative;
+    text-decoration: none;
+    color: $white;
+    transition: color 0.3s ease-in-out;
+  
+    &::before {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: currentColor;
+      transform: scaleX(0);
+      transform-origin: left;
+      transition: transform 0.3s ease-in-out;
+    }
+  
+    &:active {
+      color: $white !important;
+    }
+  
+    &:hover {
+      color: $white;
+  
+      &::before {
+        transform: scaleX(1);
+      }
+    }
+  
+    &:focus {
+      color: $white;
+  
+      &::before {
+        transform: scaleX(1);
+      }
+    }
+  }
 }
