--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -37,3 +37,4 @@
 @import 'custom/02-components/00-sid';
 @import 'custom/02-components/101-animeflv';
 @import 'custom/02-components/102-filters';
+@import 'custom/02-components/103-sidebar';
