Added overlay to downloads.

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -26,6 +26,7 @@
 @import 'custom/01-global/40-themes';
 @import 'custom/01-global/50-wysiwyg';
 @import 'custom/01-global/98-footer';
+@import 'custom/01-global/100-overlay';
 
 /**
  * External Libraries.
