--- a/scss/custom/02-components/110-sidebar.scss
+++ b/scss/custom/02-components/110-sidebar.scss
@@ -29,6 +29,12 @@
           margin-top: 10px;
         }
       }
+
+      .type-wrapper{
+        + *{
+          margin-top: 10px;
+        }
+      }
     }
   }
 }
