--- a/scss/custom/02-components/10-sites.scss
+++ b/scss/custom/02-components/10-sites.scss
@@ -1,6 +1,33 @@
-#scraping{
-  .animeflv-wrapper{
+#sites{
+  h1{
+    text-align: center;
+    margin-bottom: 0;
+
+    + *{
+      margin-top: 20px;
+    }
+  }
+
+  form{
+
+    label{
+      margin-bottom: 0;
+      align-self: center;
+    }
+
+    + *{
+      margin-top: 30px;
+    }
+  }
+
+  .animeflv-wrapper,
+  .henaojara-wrapper{
     .image{
+      img{
+        width: 100%;
+        height: auto;
+      }
+
       + *{
         margin-top: 10px;
       }
