Renamed three-cards to site-cards.

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -36,8 +36,10 @@
  * 02-components.
  */
 @import 'custom/02-components/02-hero';
+@import 'custom/02-components/03-site-cards';
 @import 'custom/02-components/10-sites';
 @import 'custom/02-components/11-animeflv';
 @import 'custom/02-components/22-sidebar';
 @import 'custom/02-components/23-filters';
 @import 'custom/02-components/90-sid-modal';
+@import 'custom/02-components/100-error';
