--- a/scss/custom/02-components/11-animeflv.scss
+++ b/scss/custom/02-components/11-animeflv.scss
@@ -73,10 +73,22 @@
     }
 
     .anime-detail{
+      opacity: 0;
+      transform: translateY(20px);
+      transition: opacity 0.3s ease, transform 0.3s ease;
+      //margin: 2rem 0;
+
       .anime{
         display: flex;
         flex-direction: column;
         gap: 15px 0;
+        background: rgba(11, 12, 42, 0.98);
+        border: 1px solid rgba(73, 80, 87, 0.5);
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+        border-radius: 1rem;
+        padding: 2rem;
+        backdrop-filter: blur(10px);
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
 
         .image{
           display: flex;
@@ -131,6 +143,16 @@
             }
           }
         }
+      }
+
+      &.show{
+        opacity: 1;
+        transform: translateY(0);
+      }
+      
+      .anime-detail.hide {
+        opacity: 0;
+        transform: translateY(20px);
       }
     }
 
