--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -23,6 +23,7 @@
 @import 'custom/01-global/21-headings';
 @import 'custom/01-global/30-pagination';
 @import 'custom/01-global/31-list';
+@import 'custom/01-global/32-tooltip';
 @import 'custom/01-global/40-themes';
 @import 'custom/01-global/50-wysiwyg';
 @import 'custom/01-global/98-footer';
