--- a/scss/custom/02-components/11-animeflv.scss
+++ b/scss/custom/02-components/11-animeflv.scss
@@ -39,11 +39,12 @@
 
           > span{
             position: absolute;
-            bottom: 0;
-            right: 0;
-            background: black;
-            padding: 5px 10px;
-            opacity: .8;
+            top: 5px;
+            left: 5px;
+            font-size: 13px;
+            background: $red;
+            padding: 2px 6px;
+            @include border-radius(5px);
           }
         }
 
@@ -213,6 +214,10 @@
                   }
                 }
               }
+            }
+
+            + *{
+              margin-top: 5px;
             }
           }
         }
