--- a/scss/custom/02-components/11-animeflv.scss
+++ b/scss/custom/02-components/11-animeflv.scss
@@ -166,7 +166,7 @@
                 #synology-episode-list{
                   text-indent: -99999999px;
                   display: flex;
-                  gap: 5px;
+                  gap: 5px 6px;
   
                   a.list-group-item-action{
                     position: relative;
