--- a/scss/custom/02-components/11-animeflv.scss
+++ b/scss/custom/02-components/11-animeflv.scss
@@ -39,12 +39,27 @@
 
           > span{
             position: absolute;
-            top: 5px;
-            left: 5px;
             font-size: 13px;
-            background: $red;
             padding: 2px 6px;
             @include border-radius(5px);
+          }
+
+          .episodes{
+            top: 5px;
+            left: 5px;
+            background-color: $red;
+          }
+
+          .language{
+            right: 5px;
+            bottom: 31px;
+            background-color: #495057;
+          }
+
+          .subtitles{
+            right: 5px;
+            bottom: 5px;
+            background-color: #495057;
           }
         }
 
@@ -54,7 +69,7 @@
           padding: 10px 0;
             
           span{
-            background-color: #495057!important;
+            background-color: #495057;
             padding: 1px 8px;
             border-radius: 25px;
             font-size: 12px;
